////////////////////////////////////////
// CHANGELOG 2.2.5-2.2.6 ///////////////
////////////////////////////////////////

****************************************
* Neue Funktionen / Änderungen *********
****************************************
PDF-Ansicht
- Block-Elemente (DIV, TABLE, TR, TH, TD) können mittels CSS-Eigenschaft 'display:none' ausgeblendet werden.

Modul: Inseratemarkt
- Administratoren können alle Inserate im Frontend verwalten.

****************************************
* Behobene Fehler **********************
****************************************
Aliasverwaltung
- Es können nun Aliase für Inhaltsseiten mit dem Schlüsselwort "require" definiert werden.

Shop
- Die Versandart wird im Frontend korrekt gesetzt, wenn nur eine definiert ist

Dateiupload
- Jede Statusmeldung wird pro Datei nur einmal ausgegeben.